<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/form_ppm"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/form_ppm" />
        <!--<item-->
            <!--android:id="@+id/form_p2u"-->
            <!--android:icon="@drawable/ic_assignment_black_24dp"-->
            <!--android:title="@string/form_p2u" />-->
        <item
            android:id="@+id/guide"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/guide" />
        <item
        android:id="@+id/about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/about" />
    </group>

    <!--<group android:checkableBehavior="single">-->
        <!--<item-->
            <!--android:id="@+id/nav_camera"-->
            <!--android:icon="@drawable/ic_menu_camera"-->
            <!--android:title="@string/form_ppm" />-->
        <!--<item-->
            <!--android:id="@+id/nav_gallery"-->
            <!--android:icon="@drawable/ic_menu_gallery"-->
            <!--android:title="P2U" />-->
        <!--<item-->
            <!--android:id="@+id/nav_slideshow"-->
            <!--android:icon="@drawable/ic_menu_slideshow"-->
            <!--android:title="Slideshow" />-->
        <!--<item-->
            <!--android:id="@+id/nav_manage"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="Guide" />-->
    <!--</group>-->

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
