<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <android.support.v7.widget.CardView
        android:id="@+id/btn_hd465_7r"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card_view:cardCornerRadius="3dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="10dp">

            <ImageView
                android:src="@drawable/hd465_7r"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/gde_hd465_7R"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/btn_hd785_7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card_view:cardCornerRadius="3dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/hd785_7"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/gde_hd785_7"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/btn_pc1250_8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        card_view:cardCornerRadius="3dp"
        card_view:cardBackgroundColor="@android:color/white"
        card_view:cardUseCompatPadding="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:padding="10dp">

            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:src="@drawable/pc1250_8"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/gde_pc1250_8"/>
        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>